# static-analyser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  TODO.txt  clean.sh  get_code_cov.sh  main.cpp
analyzer/: analyzer.cpp  analyzer.hpp
cryptominisat-5.0.1/src/: CMakeLists.txt  cryptominisat.h  cryptominisat_c.h.in  propengine.cpp
parser/: node.h  parser.y  tokens.l
provers/cryptominisat-5.0.1/: CMakeLists.txt
provers/cryptominisat-5.0.1/src/: cryptominisat.h  sccfinder.cpp  solvertypesmini.h
provers/cryptominisat-5.0.1/web/: drawgraphs.js  selectdata.js
provers/z3-z3-4.5.0/: CMakeLists.txt  cmake
provers/z3-z3-4.5.0/contrib/cmake/cmake/: target_arch_detect.cmake  z3_add_component.cmake
provers/z3-z3-4.5.0/contrib/cmake/examples/c/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/examples/c++/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/examples/tptp/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/api/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/api/dotnet/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/api/java/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/api/python/: CMakeLists.txt
provers/z3-z3-4.5.0/contrib/cmake/src/ast/pattern/: CMakeLists.txt
src/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
src/analyzer/: SatStaticAnalyzer.cpp  SatStaticAnalyzer.hpp  analyzer.cpp  analyzer.hpp  assignment.hpp  exceptions.hpp  incSatAnalyzer.cpp  incSatAnalyzer.hpp  node.cpp  node.h  satAnalyzer.cpp  satAnalyzer.hpp  satNode.cpp  smtAnalyzer.cpp  smtAnalyzer.hpp  transition.hpp  types.hpp  variableName.cpp  variableName.hpp
src/parser/: node.h  parser.y  tokens.l
tests/: CMakeLists.txt  simpleGoogleTest.cpp  testgtest.cpp
tests/test/: assignmentInArg.myprog  diffNamesExample.myprog  diff_args.myprog  doubleInput.myprog  fieldInArg.myprog  functionDefinedTwice.myprog  functionIsNotDefined.myprog  integerInBinOp.myprog  nested.myprog  originalExample.myprog  recursive_call.myprog  same_name_in_output.myprog  sideEffect1.myprog  sideEffect2.myprog  simple.myprog  simpleEQ.myprog  simpleEQConst.myprog  simpleNEQConst.myprog  structureInCall.myprog
